--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pl.dudi</groupId>
-    <artifactId>client-service</artifactId>
+    <artifactId>customer-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>client-service</name>
     <description>automotive-app-client-service</description>
