--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: client-service
+    name: customer-service
   config:
     import: optional:configserver:http://localhost:8085
   security:
@@ -10,4 +10,5 @@ spring:
           github:
             clientId: 1f183f4da9071c040c0f
             clientSecret: eb465322cb6f76920767852d1ec0cc4adfa0e171
-
+            scope:
+              - user:email
