Sending email with gmail and rabbitmq listener

--- a/email-service/src/main/resources/application.yml
+++ b/email-service/src/main/resources/application.yml
@@ -1,5 +1,23 @@
+temp:
+  file:
+    location: /src/main/resources/tmpfiles/
+
 spring:
   application:
     name: email-service
   config:
     import: optional:configserver:http://localhost:8085
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: piotrjavatestowy@gmail.com
+    password: odckdpuqirwjopwp
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
