--- a/email-service/src/main/resources/application.yml
+++ b/email-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: piotrjavatestowy@gmail.com
-    password: odckdpuqirwjopwp
+    password: ${email_key}
     properties:
       mail:
         smtp:
