change configurations for services

--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -12,4 +12,7 @@ spring:
             clientSecret: eb465322cb6f76920767852d1ec0cc4adfa0e171
             scope:
               - user:email
-
+#
+#
+#
+#    enabled: false
